--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -43,11 +43,11 @@
                     </div>
                 </div>
                 <div class="col s12 m6">
-                    <h5 class="header cyan-text text-darken-3 mt-20">Product Image</h5>
+                    <h5 class="header cyan-text text-darken-3 mt-20">Main Product Image</h5>
                     <div class="card horizontal mt-20" id="main-image-form">
                         <div class="card-stacked">
                             <div class="card-content">
-                                {{ form.widget_image }}
+                                {{ form.main_image }}
                             </div>
                             <div class="card-action">
                                 <a class="cyan-text text-darken-2">Clear Image</a>
@@ -58,15 +58,7 @@
                     <div class="card horizontal mt-20" id="additional-images-form">
                         <div class="card-stacked">
                             <div class="card-content">
-                                <div class="file-field input-field">
-                                    <div class="btn">
-                                        <span>Images</span>
-                                        <input type="file" id="images" name="images" accept="image/*" multiple>
-                                    </div>
-                                    <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text" placeholder="Upload one or more images">
-                                    </div>
-                                </div>
+                                {{ add_image.image | materializecss }}
                             </div>
                             <div class="card-action">
                                 <a class="cyan-text text-darken-2">Clear Images</a>
