added edit and delete views, modified widget html, added links in products.html to edit or delete

--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -11,7 +11,7 @@
         </p>
     </div>
     {% endif %}
-    <p>{{ widget.input_text }}: </p>
+    <p>{{ widget.input_text }}</p>
 {% endif %}
 
 <div class="file-field input-field">
