--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -14,10 +14,10 @@
         <div class="row">
             <div class="col s12">
                 <h4 class="center-text header">Product Management</h4>
-                <p>After editing the product's information, make sure to Save your changes</p>
+                <p>Edit the product information and save your changes when ready</p>
             </div>
         </div>
-        <form action="{% url 'add_product' %}" method="POST" id="add-product-form" enctype="multipart/form-data">
+        <form action="{% url 'edit_product' product.id %}" method="POST" id="edit-product-form" enctype="multipart/form-data">
         {% csrf_token %}
             <div class="row">
                 <div class="col s12 m6">
@@ -58,7 +58,7 @@
                     <div class="card horizontal mt-20" id="additional-images-form">
                         <div class="card-stacked">
                             <div class="card-content">
-                                {{ add_image.image | materializecss }}
+                                Other images
                             </div>
                             <div class="card-action">
                                 <a class="cyan-text text-darken-2">Clear Images</a>
