added javascript to to custom file input widget

--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -22,4 +22,5 @@
     <div class="file-path-wrapper">
         <input placeholder="Upload an image file" class="file-path validate" type="text">
     </div>
+    <p class="teal-text text-darken-2" id="filename"></p>
 </div>
