--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <!-- Custom CSS -->
 	<link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Star Ratings CSS -->
+    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 	{% endblock %}
 
 	{% block extra_css %}
