added new template for start rating widget for the reviews section that will be used in product_detail.html, changed overall settings of star sizes in settings.py

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -220,6 +220,7 @@
                 </div>
                 <div id="product-reviews-tab" class="col s12">
                     <p>Reviews go here</p>
+                    {% ratings product template_name="star_ratings/only_stars_widget.html"%}
                 </div>
             </div>
         </div>
