--- a/templates/star_ratings/widget.html
+++ b/templates/star_ratings/widget.html
@@ -68,7 +68,7 @@
             <div class="star-ratings-rating-count">{% trans 'Rating Count: ' %} <span class='star-ratings-rating-value'>{{ rating.count }}</span></div>
         {% endblock rating_count %}
         {% block rating_user %}
-            <div class="star-ratings-rating-user">{% trans 'You Rated: ' %} <span class='star-ratings-rating-value' data-when-null="{% trans 'Not rated' %}">{% if user_rating %}{{ user_rating.score }}{% else %}{% trans 'Not rated' %}{% endif %}</span></div>
+            <div class="star-ratings-rating-user">{% trans 'You Rated: ' %} <span id="star-ratings-user-rating" class='star-ratings-rating-value' data-when-null="{% trans 'Not rated' %}">{% if user_rating %}{{ user_rating.score }}{% else %}{% trans 'Not rated' %}{% endif %}</span></div>
             {% if not user.is_authenticated and not anonymous_ratings and not read_only %}
                 <p>{% trans 'Please log in to rate.' %}</p>
             {% endif %}
