--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -234,12 +234,12 @@
                             </div>
                         </div>
                         <div class="col s12 m6">
-                            <h5 class="center-align  cyan-text text-darken-3">Your Review {{ user_rating.score }}</h5>
+                            <h5 class="center-align cyan-text text-darken-3">Your Review</h5>
                             {% if request.user.is_authenticated %}
-                                <form action="#" method="POST" id="add-update-review-form">
+                                <form action="{% url 'add_or_update_review' product.id request.user %}" method="POST" id="add-update-review-form">
                                     {% csrf_token %}
                                     <div class="mt-20 center-align">
-                                        {% ratings product template_name="star_ratings/only_stars_widget.html"%}
+                                        {% ratings product template_name="star_ratings/user_only_stars_widget.html"%}
                                     </div>
                                     <div class="center-align">
                                         {% ratings product read_only="True" template_name="star_ratings/user_stats.html"%}
@@ -248,8 +248,7 @@
                                     {{ review_form.user_rating | materializecss }}
                                     {{ review_form.star_percentage | materializecss }}
                                     {{ review_form.description | materializecss }}
-                                    <button type="submit"> Save</button>
-
+                                    <button type="submit">Save</button>
                                 </form>
                             {% else %}
                                 Please <a href="{% url 'account_login' %}" class="cyan-text text-darken-1">log in</a> to your account or <a class="cyan-text text-darken-1" href="{% url 'account_signup' %}">sign up</a> to start rating our products
@@ -343,7 +342,14 @@
         $('select').material_select();
         $('ul.tabs').tabs('select_tab', 'tab_id');
         autoplay();
+        $('#custom-user-star-rating-foreground').css("width", "{{ user_review.star_percentage }}%")
     });
 </script>
+<script type="text/javascript">
+        $('.star-ratings-rate-action').submit(function() {
+            alert( "Handler for .submit() called." );
+            $('#filename').text(`Image will be set to:`);
+        });
+    </script>
 {% include 'products/includes/product_detail_script.html' %}
 {% endblock %}
