--- a/templates/star_ratings/user_only_stars_widget.html
+++ b/templates/star_ratings/user_only_stars_widget.html
@@ -21,7 +21,7 @@
 {% endblock rating_style %}
 
 {% block rating_container %}
-<div id="{{ id }}" class="star-ratings" data-max-rating="{{ star_count }}">
+<div id="{{ id }}" class="star-ratings custom-user-star-ratings-widget" data-max-rating="{{ star_count }}">
     {% block rating_stars %}
         <div class="star-ratings-rating-stars-container">
             <ul class="star-ratings-rating-background">
